Syntaxe/Test/Invalide/badTokens_chaines_1.deca
// Description:
//    tests des chaines de caracteres.
//
// Resultats:
//    Ligne 10 : Erreur lexical.
//
// Historique:
//    crée le 14/01/2012

" a 

et b"

